--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: vesriontest_development
+  database: daq8u1aqod25ac
   pool: 5
-  username: vesriontest
-  password:
+  username: ihkglxglzytwci
+  password:PsBMbA-_JGftE0v1l005kSX8XW
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -46,15 +46,15 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: vesriontest_test
+  database: daq8u1aqod25ac
   pool: 5
-  username: vesriontest
-  password:
+  username:ihkglxglzytwci
+  password:PsBMbA-_JGftE0v1l005kSX8XW
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: vesriontest_production
+  database: daq8u1aqod25ac
   pool: 5
-  username: vesriontest
-  password:
+  username: ihkglxglzytwci
+  password:PsBMbA-_JGftE0v1l005kSX8XW
