--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: daq8u1aqod25ac
+  database: vesriontest_development
   pool: 5
-  username: ihkglxglzytwci
-  password:PsBMbA-_JGftE0v1l005kSX8XW
+  username: vesriontest
+  password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -46,15 +46,15 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: test
+  database: vesriontest_test
   pool: 5
-  username:ihkglxglzytwci
-  password:PsBMbA-_JGftE0v1l005kSX8XW
+  username: vesriontest
+  password:
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: daq8u1aqod25ac
+  database: vesriontest_production
   pool: 5
-  username: ihkglxglzytwci
-  password:PsBMbA-_JGftE0v1l005kSX8XW
+  username: vesriontest
+  password:
